objects/ScCollection_Employment_Information__c.object
<CustomObject>
    <fields>
        <fullName>ScCollection_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employment Informations</relationshipLabel>
        <relationshipName>Employment_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Business_Partner_Id__c</fullName>
        <label>Business Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_City_Name__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment Informations(Contact)</relationshipLabel>
        <relationshipName>Employment_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Direct_Bus_Landline_2__c</fullName>
        <label>Direct Bus Landline 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Direct_Bus_Landline__c</fullName>
        <label>Direct Bus Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Employment_Type_Description__c</fullName>
        <label>Employment Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Main_Bus_Phone__c</fullName>
        <label>Main Bus Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mobile_Others__c</fullName>
        <label>Mobile - Others</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mobile_Personal__c</fullName>
        <label>Mobile - Personal</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mobile_Work__c</fullName>
        <label>Mobile - Work</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Street_Number__c</fullName>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Street_Type_Code__c</fullName>
        <label>Street Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sccollection_Business_Partner_Name__c</fullName>
        <label>Business Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sccollection_Employment_Id__c</fullName>
        <externalId>true</externalId>
        <label>Employment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Employment Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScCollection_Account__c</columns>
        <columns>ScCollection_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EI-{0000000}</displayFormat>
        <label>Employment Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>